kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chefhub
  labels:
    name: chefhub
    istio-injection: enabled
